Add styles to the pages

--- a/recipes/char-siu.html
+++ b/recipes/char-siu.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Char_Siu</title>
+    <link rel="stylesheet", href="../styles.css">
 </head>
 <body>
     <h1>Char-Siu</h1>
-    <div><img src="../images/Char-Siu.jpeg" width="700px" /></div>
+    <div><img src="../images/Char-Siu.jpeg" width="700px" class="meal-pic"/></div>
     
-    <div>
+    <div class="words">
         <h2>Description</h2>
         <p>Char siu is Chinese restaurant-style pork with a deep red, sweet and sticky coating. Char siu literally means "fork roast" and refers to the traditional method of cooking this dish by which strips of seasoned pork were skewered with long forks and roasted in a covered oven or over a fire. This version uses pork tenderloin and is easy to make at home on your charcoal grill. Enjoy the sweet and salty taste on its own or serve it over rice or noodles.</p>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Ingredients</h2>
         <ul>
             <li>½ cup soy sauce</li>
@@ -29,7 +30,7 @@
         </ul>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Steps</h2>
         <ol>
             <li>Gather all ingredients.</li>
