--- a/recipes/crispy-orange-beef.html
+++ b/recipes/crispy-orange-beef.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Crispy_Orange_Beef</title>
+    <link rel="stylesheet", href="../styles.css">
 </head>
 <body>
     <h1>Crispy Orange Beef</h1>
-    <div><img src="../images/Crispy-Orange-Beef.webp" width="700px" /></div>
+    <div><img src="../images/Crispy-Orange-Beef.webp" width="700px" class="meal-pic"/></div>
     
-    <div>
+    <div class="words">
         <h2>Description</h2>
         <p>A delicious orange beef recipe that is crispy and sweet yet mildly spiced. This beef stir-fry recipe is great served with steamed rice and broccoli.</p>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Ingredients</h2>
         <ul>
             <li>1 ½ pounds beef top sirloin, thinly sliced</li>
@@ -34,7 +35,7 @@
         </ul>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Steps</h2>
         <ol>
             <li>Lay beef in a single layer on a baking sheet lined with paper towels. Allow to dry in the refrigerator for 30 minutes.</li>
