--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin_Recipes</title>
+    <link rel="stylesheet" , href="./styles.css">
 </head>
+
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/char-siu.html">Char-Siu</a></li>
-        <li><a href="./recipes/crispy-orange-beef.html">Cripy Orange Beef</a></li>
-        <li><a href="./recipes/tea-leaf-eggs.html">Tea Leaf Eggs</a></li>
-    </ul>
+    <div class="words">
+        <ul class="recipes">
+            <li><a href="./recipes/char-siu.html">Char-Siu</a></li>
+            <li><a href="./recipes/crispy-orange-beef.html">Cripy Orange Beef</a></li>
+            <li><a href="./recipes/tea-leaf-eggs.html">Tea Leaf Eggs</a></li>
+        </ul>
+    </div>
 </body>
+
 </html>
