--- a/recipes/tea-leaf-eggs.html
+++ b/recipes/tea-leaf-eggs.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tea_Leaf_Eggs</title>
+    <link rel="stylesheet", href="../styles.css">
 </head>
 <body>
     <h1>Tea Leaf Eggs</h1>
-    <div><img src="../images/Tea-Leaf-Eggs.jpeg" width="700px" /></div>
+    <div><img src="../images/Tea-Leaf-Eggs.jpeg" width="700px" class="meal-pic"/></div>
     
-    <div>
+    <div class="words">
         <h2>Description</h2>
         <p>Tea eggs are one of my favorite dishes and traditional lucky food to make for the Lunar New Year. These hard-boiled eggs are subtly flavored with anise and have a deep brown hue from black tea and soy. The marbled patterns from the cracked shells make these quite attractive. Store unpeeled eggs in a tightly sealed container in the refrigerator for four to five days. Recipe courtesy of Mom.</p>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Ingredients</h2>
         <ul>
             <li>3 cups water</li>
@@ -29,7 +30,7 @@
         </ul>
     </div>
 
-    <div>
+    <div class="words">
         <h2>Steps</h2>
         <ol>
             <li>Combine 3 cups water, tea leaves, soy sauce, black soy sauce, zest, cinnamon stick, star anise, and 1/4 teaspoon salt in a large saucepan; bring to a boil. Reduce heat, cover, and simmer for 3 hours.</li>
